--- a/lang/de.json
+++ b/lang/de.json
@@ -3,7 +3,7 @@
     "page.home.head.meta.description": "Next.js i18n Beispiel - Deutch",
     "page.home.title": " Willkommen zur <b>Next.js i18n tutorial</b>",
     "page.home.description": "Du siehst diese Seite in Englisch🚀",
-    "page.home.test" : "der Test"
-
+    "page.home.test" : "der Test",
+    "page.home.locale": "de"
 }
 
