--- a/lang/en.json
+++ b/lang/en.json
@@ -4,6 +4,8 @@
     "page.home.title": "Welcome to <b>Next.js i18n tutorial</b>",
     "page.home.description": "You are currently viewing the homepage in English 🚀",
     "page.home.test" : "test",
-    "page.home.locale": "en"
+    "page.home.locale": "en",
+    "page.home.chooselang": "Choose a language: "
+
   }
   
